//
// Copyright 2023 DXOS.org
//

syntax = "proto3";

package dxos.agent.dashboard;
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "dxos/config.proto";

message AgentStatus {
  enum Status {
    ON = 0;
    OFF = 1;
  }
  
  Status status = 1;
  repeated PluginState plugins = 2;
}

message PluginState {
  string plugin_id = 1;
  google.protobuf.Struct plugin_config = 2;
}

service DashboardService {
  rpc status(google.protobuf.Empty) returns (stream AgentStatus);
  rpc changePluginConfig(PluginState) returns (google.protobuf.Empty);
}